<resources>
    <string name="app_name">D-ChronoChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Create ChatRoom</string>
    <string name="title_activity_settings">Chat Settings</string>
    <string name="title_activity_manage">Manage Resources</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="send_message">Send a message…</string>
    <string name="usernameShared">id.ac.ui.clab.dchronochat.DChronoChat.SHARED-PREFS.USERNAME</string>
    <string name="screennameShared">id.ac.ui.clab.dchronochat.DChronoChat.SHARED-PREFS.SCREENNAME</string>
    <string name="hubprefixShared">id.ac.ui.clab.dchronochat.DChronoChat.SHARED-PREFS.HUBPREFIX</string>
    <string name="sharedPrefs">id.ac.ui.clab.dchronochat.DChronoChat.SHARED-PREFS</string>
    <string name="remoteIP">id.ac.ui.clab.dchronochat.DChronoChat.IPADDRESS</string>
    <string name="create_hostspot">创建WIFI热点</string>
    <string name="close_hostspot">关闭WIFI热点</string>
    <string name="send_data">发送数据</string>
    <string name="search">搜索WIFI</string>

    <string name="Return">上一级</string>
    <string name="Cancel">取消</string>
    <string name="Enter">确定</string>
    <string name="editFileName">输入文件名</string>
    <string name="folder">folder</string>
    <string name="todo">TODO</string>
    <string name="send">send</string>
    <string name="file">file</string>
    <string name="success">success</string>
    <string name="speed">KB/s</string>

</resources>
