<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="id.ac.ui.clab.dchronochat.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        android:windowSoftInputMode="adjustPan">

        <android.support.v7.widget.Toolbar
            android:id="@+id/drawer_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/listItemChat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/msg_box"
            android:layout_below="@id/drawer_bar"
            android:background="@color/white"
            android:orientation="vertical" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_above="@+id/msg_box"
            android:background="@drawable/light_fade_up" />

        <LinearLayout
            android:id="@+id/msg_box"
            style="@style/AppTheme.MessageBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <EditText
                android:id="@+id/inputText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="4"
                android:inputType="text"
                android:hint="@string/send_message" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pn_blue"
                android:text="@string/send"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/fileButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/orange"
                android:text="@string/file"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>